--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name="description" content="York Greenways" />
 		<meta charset="utf-8" />
 		<title> York Greenways </title> 
+	    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- IMPORT OF STYLESHEETS --> 
 		<!-- Link to Stylesheet-->
