--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<meta name="author" content="Marc Schmitz" />
 		<meta name="description" content="York Greenways" />
 		<meta charset="utf-8" />
+	    	<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title> York Greenways </title> 
 		
 		<!-- IMPORT OF STYLESHEETS --> 
