--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta name="author" content="Marc Schmitz" />
 		<meta name="description" content="York Greenways" />
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title> York Greenways </title> 
 		
 		<!-- IMPORT OF STYLESHEETS --> 
