--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>  		
 		<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
 		<script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
+	    	<script src="https://unpkg.com/leaflet.featuregroup.subgroup@1.0.2/dist/leaflet.featuregroup.subgroup.js"></script>
 
 		<script src="data/solarway.js" type="text/javascript"> </script> 
 		<link rel="shortcut icon" href="#">
